--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.2",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
@@ -26,6 +27,7 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "firebase": "^5.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1"
