--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "firebase": "^5.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-router": "^4.3.1"
+    "react-router": "^4.3.1",
+    "uuid": "^3.3.2"
   },
   "repository": {
     "type": "git",
